--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <ul class="copyright">
                 <li>&copy; Untitled. All rights reserved.</li>
                 <li>所有者: 田源</li>
-                <li>联系我:tianyuan01528@foxmail.com</li>
+                <li>邮箱: tianyuan01528@foxmail.com</li>
             </ul>
         </div>
     </section>
