--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,16 +9,16 @@
             <ul>
                 <li><a href="{{ site.baseurl }}/">首页</a></li>
                 <li><a href="{{ site.baseurl }}/blog">博客</a></li>
-                <li><a href="{{ site.baseurl }}/contact">滴滴我</a></li>
+                <!-- <li><a href="{{ site.baseurl }}/contact">滴滴我</a></li> -->
             </ul>
         </nav>
         <footer>
             <ul class="icons">
-                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-                <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                <!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+                <!-- <li><a href="#" class="icon fa-qq"><span class="label">QQ</span></a></li> -->
+                <li><a href="https://github.com/ty01528?tab=repositories" class="icon fa-github"><span class="label">Github</span></a></li>
+                <li><a href="mailto:tianyuan01528@foxmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
             </ul>
         </footer>
     </section>
