wait for tensorflow update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <header>
             <span class="image avatar"><img src="{{ site.baseurl }}/images/touxiang.png" alt="" /></span>
             <h1 id="logo"><a href="{{ site.baseurl }}/">田源</a></h1>
-            <p>一个干机器学习活儿的社畜</p>
+            <p>我要当全栈工程师！</p>
         </header>
         <nav id="nav">
             <ul>
@@ -14,9 +14,6 @@
         </nav>
         <footer>
             <ul class="icons">
-                <!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
-                <!-- <li><a href="#" class="icon fa-qq"><span class="label">QQ</span></a></li> -->
                 <li><a href="https://github.com/ty01528?tab=repositories" class="icon fa-github"><span class="label">Github</span></a></li>
                 <li><a href="mailto:tianyuan01528@foxmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
             </ul>
